k8s/hello-site.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-site-v1
  labels:
    version: v1
spec:
  selector:
    matchLabels:
      app: hello-site
      version: v1
  replicas: 2
  template:
    metadata:
      labels:
        app: hello-site
        version: v1
    spec:
      containers:
      - name: hello-site
        image: registry.cn-shanghai.aliyuncs.com/zjn-test-ns/test-image:latest
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: hello-site-v1
  labels:
    version: v1
spec:
  type: ClusterIP
  ports:
  - name: hello-port
    port: 80
    targetPort: 80
  selector:
    app: hello-site
    version: v1
