k8s/mlt.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 3000
      name: grafana
      protocol: TCP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-service-ingress
  namespace: istio-system
spec:
  hosts: 
  - '*'
  gateways:
  - grafana-gateway
  tcp:
  - route:
    - destination:
        host: grafana
